# CursorBar

./: .gitignore  CHANGELOG.md  Cargo.toml  README-zh_CN.md  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
icon/macos/: icon.icns
scripts/: package.sh
src/: api.rs  config.rs  main.rs  menu.rs  settings.rs  tray.rs  utils.rs
