[package]
name = "cursor_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = { version = "3.0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
rusqlite = "0.35"
base64 = "0.13"
dirs = "6.0"
open = "5.3.2"
tray-icon = "0.20.1"
image = "0.25.6"
tao = "0.33.0"
parking_lot = "0.12"
retry = "2.0"

[target."cfg(target_os = \"linux\")".dev-dependencies]
gtk = "0.18"

[target."cfg(target_os = \"macos\")".dependencies]
objc2-core-foundation = { version = "0.3.0", default-features = false, features = [
    "CFRunLoop",
] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
