[package]
name = "cursor_bar"
version = "0.1.0"
edition = "2024"
authors = ["atopx <3940422@qq.com>"]
description = "Cursor AI usage monitoring"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/atopx/CursorBar"

[dependencies]
ureq = { version = "3.0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
rusqlite = { version = "0.35", features = ["bundled"] }
base64 = "0.22"
dirs = "6.0"
open = "5.3.2"
tray-icon = "0.20.1"
image = "0.25.6"
tao = "0.33.0"
parking_lot = "0.12"
retry = "2.0"

[target."cfg(target_os = \"linux\")".dev-dependencies]
gtk = "0.18"

[target."cfg(target_os = \"macos\")".dependencies]
objc2-core-foundation = { version = "0.3.0", default-features = false, features = [
    "CFRunLoop",
] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[package.metadata.bundle]
name = "CursorBar"
identifier = "io.github.atopx.cursorbar"
icon = [
    "icon/linux/32x32.png",
    "icon/linux/64x64.png",
    "icon/linux/128x128.png",
    "icon/linux/256x256.png",
]
copyright = "Copyright (c) atopx 2025. All rights reserved."
category = "Utility"
short_description = "一个用于去除PDF权限限制的工具"
long_description = """
一个简单易用的工具，可以去除PDF文档的复制/编辑/打印等权限限制。
使用FLTK图形界面，轻量级、高性能。
"""

[package.metadata.wix]
name = "CursorBar"
manufacturer = "atopx"
product-name = "CursorBar"
product-icon = "icon/windows/icon.ico"
